# rag-with-late-chunking

./: .gitignore  README.md  crawled_news_2025-04-22_1.pkl  embedder.py  main.py  pyproject.toml  ranking.py  results_2025-04-23.pkl  test.ipynb  utils.py
qdrant_storage/: raft_state.json
real_estate_rag/: .gitignore  chunking.py  config.py  pooling.py  ranking.py  utils.py
